[package]
name = "tpaint"
version = "0.1.0"
authors = ["Ben-Lichtman <Ben_Lichtman@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
tui = { version = "0.9.5", features = ["crossterm"] }
crossterm = "0.17.6"
unicode-width = "0.1.8"

