[package]
name = "tpaint"
version = "0.1.1"
authors = ["Ben Lichtman"]
edition = "2018"
description = "Terminal based unicode and ascii diagrams and drawings"
repository = "https://github.com/Ben-Lichtman/tpaint"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0.20"
crossterm = "0.17.6"
unicode-width = "0.1.8"

