[package]
name = "tpaint"
version = "0.2.3"
authors = ["Ben-Lichtman"]
edition = "2018"
description = "Terminal based unicode and ascii diagrams and drawings"
repository = "https://github.com/Ben-Lichtman/tpaint"
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = "0.19.0"
thiserror = "1.0.24"
line_drawing = "0.8.0"
unicode-width = "0.1.8"


